spell datapack change, effectconditions now used for enpreds, enpreds removed

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -94,3 +94,5 @@ v.5.3.14
 - try optimize syncing to client a bit
 If you notice anything weird after update please say
 - /mine_and_slash reset_player_data to reset parts of a player
+- added status effect wiki
+- added blizzard spell
