--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -407,6 +407,7 @@
 	"mmorpg.spell.astral_totem": "Astral Totem",
 	"mmorpg.spell.awaken_mana": "Inspiration",
 	"mmorpg.spell.black_hole": "Black Hole",
+	"mmorpg.spell.blizzard": "Blizzard",
 	"mmorpg.spell.boomerang": "Boomerang",
 	"mmorpg.spell.chain_lightning": "Chain Lightning",
 	"mmorpg.spell.chaos_totem": "Chaos Totem",
@@ -851,52 +852,6 @@
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"mmorpg.ailment.bleed": "Bleed",
@@ -929,6 +884,52 @@
 	"mmorpg.effect.wounds": "Wounds",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1155,6 +1156,7 @@
 	"mmorpg.word.backpack": "Backpack",
 	"mmorpg.word.broken": "Broken",
 	"mmorpg.word.cantgetmoreaffixes": "Can't have more affixes.",
+	"mmorpg.word.capped_because_player_level": " - Capped due to Player Level Too Low",
 	"mmorpg.word.capped_to_lvl": "[Capped to LVL]",
 	"mmorpg.word.capped_to_wep_dmg": " (Capped to %1$s%% of Wep-Dmg)",
 	"mmorpg.word.cast_time": "Cast Time: %1$ss",
@@ -1223,6 +1225,7 @@
 	"mmorpg.word.not_a_potential_consumer": "Does not consume potential when used",
 	"mmorpg.word.nothing": "Nothing",
 	"mmorpg.word.on_slots": "Slots: ",
+	"mmorpg.word.only_show_allocated": "Only Show Allocated Talents, Toggle ON/OFF",
 	"mmorpg.word.per_stack": " (per stack): ",
 	"mmorpg.word.pet_basic": "Pet Basic Attack:",
 	"mmorpg.word.player_affixes": "Player Affixes",
@@ -1234,6 +1237,7 @@
 	"mmorpg.word.rune": "Rune",
 	"mmorpg.word.runeword": "Runeword",
 	"mmorpg.word.salvaging": "Salvaging",
+	"mmorpg.word.shift_to_show_effect": "Shift to Show Status Effect info.",
 	"mmorpg.word.skillgem": "Skills",
 	"mmorpg.word.soul": "Soul",
 	"mmorpg.word.spell_stats": "Spell Stats:",
@@ -1349,7 +1353,7 @@
 	"mmorpg.stat.chaos_spell_dmg": "Chaos Damage",
 	"mmorpg.stat.chaos_spell_dmg_taken": "Chaos Damage Taken",
 	"mmorpg.stat.chaos_vuln_crit": "\u00A77Chaos Damage always crits you.",
-	"mmorpg.stat.chaos_weapon_damage": "Chaos Damage",
+	"mmorpg.stat.chaos_weapon_damage": "Chaos DMG on Basic ATK",
 	"mmorpg.stat.cold_ailment_aura_cost": "\u00A77Decree of Frost Cost",
 	"mmorpg.stat.cold_cdr": "Cold Spell Cooldown Reduction",
 	"mmorpg.stat.cold_damage_aura_cost": "\u00A77Cold Damage Cost",
@@ -1456,7 +1460,7 @@
 	"mmorpg.stat.fire_spell_dmg": "Fire Damage",
 	"mmorpg.stat.fire_spell_dmg_taken": "Fire Damage Taken",
 	"mmorpg.stat.fire_vuln_crit": "\u00A77Fire Damage always crits you.",
-	"mmorpg.stat.fire_weapon_damage": "Fire Damage",
+	"mmorpg.stat.fire_weapon_damage": "Fire DMG on Basic ATK",
 	"mmorpg.stat.fishing_core_drop_bonus": "Core Drops",
 	"mmorpg.stat.fishing_double_drop": "Double Drop Chance",
 	"mmorpg.stat.fishing_exp_bonus": "Profession Exp Bonus",
@@ -1548,6 +1552,7 @@
 	"mmorpg.stat.learn_astral_totem": "Learn Astral Totem",
 	"mmorpg.stat.learn_awaken_mana": "Learn Inspiration",
 	"mmorpg.stat.learn_black_hole": "Learn Black Hole",
+	"mmorpg.stat.learn_blizzard": "Learn Blizzard",
 	"mmorpg.stat.learn_boomerang": "Learn Boomerang",
 	"mmorpg.stat.learn_chain_lightning": "Learn Chain Lightning",
 	"mmorpg.stat.learn_chaos_totem": "Learn Chaos Totem",
@@ -1645,7 +1650,7 @@
 	"mmorpg.stat.lightning_spell_dmg": "Lightning Damage",
 	"mmorpg.stat.lightning_spell_dmg_taken": "Lightning Damage Taken",
 	"mmorpg.stat.lightning_vuln_crit": "\u00A77Lightning Damage always crits you.",
-	"mmorpg.stat.lightning_weapon_damage": "Lightning Damage",
+	"mmorpg.stat.lightning_weapon_damage": "Lightning DMG on Basic ATK",
 	"mmorpg.stat.low_hp_healing": "Healing when Low",
 	"mmorpg.stat.magic_cdr": "Magic Spell Cooldown Reduction",
 	"mmorpg.stat.magic_find": "Magic Find",
@@ -1722,8 +1727,8 @@
 	"mmorpg.stat.physical_spell_dmg": "Physical Damage",
 	"mmorpg.stat.physical_spell_dmg_taken": "Physical Damage Taken",
 	"mmorpg.stat.physical_vuln_crit": "\u00A77Physical Damage always crits you.",
-	"mmorpg.stat.physical_weapon_damage": "Physical Damage",
-	"mmorpg.stat.physical_weapon_damage_per_perc_of_mana": "\u00A77Gain \u00A7a[VAL1]%\u00A77 of your \u00A79\u262F Mana\u00A77\u00A77 as extra \u00A76\u2600 Physical Damage\u00A77",
+	"mmorpg.stat.physical_weapon_damage": "Physical DMG on Basic ATK",
+	"mmorpg.stat.physical_weapon_damage_per_perc_of_mana": "\u00A77Gain \u00A7a[VAL1]%\u00A77 of your \u00A79\u262F Mana\u00A77\u00A77 as extra \u00A76\u2600 Physical DMG on Basic ATK\u00A77",
 	"mmorpg.stat.piercing_projectiles": "Piercing Projectiles",
 	"mmorpg.stat.plus_lvl_all_spells": "To All Spells",
 	"mmorpg.stat.plus_lvl_area_spells": "To Area Spells",
@@ -1858,7 +1863,7 @@
 	"mmorpg.stat.water_penetration": "Cold Penetration",
 	"mmorpg.stat.water_resist": "Cold Resistance",
 	"mmorpg.stat.water_vuln_crit": "\u00A77Cold Damage always crits you.",
-	"mmorpg.stat.water_weapon_damage": "Cold Damage",
+	"mmorpg.stat.water_weapon_damage": "Cold DMG on Basic ATK",
 	"mmorpg.stat.weapon_damage": "Weapon Damage",
 	"mmorpg.stat.weapon_skill_cdr": "Weapon skill Spell Cooldown Reduction",
 	"mmorpg.stat.weapon_skill_spell_dmg": "Weapon skill Damage",
@@ -2063,6 +2068,7 @@
 	"mmorpg.chat.tool_level_up": "%1$s has reached level %2$s!",
 	"mmorpg.chat.vines_shrink": "The Vines appear to shrink, for now...",
 	"mmorpg.chat.weapon_req_not_met": "Weapon requirements not met",
+	"mmorpg.chat.you_lack_jewel_slots": "You lack jewel slots! You gain these typically from the Talent tree. You can use the search bar in the Talents screen to find them.",
 
 "_comment": " [CATEGORY]: CHAT MESSAGES - NAMES",
 
@@ -2107,6 +2113,7 @@
 	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
 	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
 	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole] \u00A75\u2600 Chaos\u00A77 Damage when it expires.",
+	"spell.desc.blizzard": "Create a Cloud that sends cold waves, damaging enemies for [calc:blizzard] \u00A7b\u2600 Cold\u00A77 Damage and for same amount of Physical Damage if the targets are Bone-Chilled.",
 	"spell.desc.boomerang": "Strike enemies with a projectile that deals [calc:boomerang] \u00A76\u2600 Physical\u00A77 Damage",
 	"spell.desc.chain_lightning": "Strike enemies with chaining lightning that deals [calc:lightning_spear] \u00A7e\u2600 Lightning\u00A77 Damage",
 	"spell.desc.chaos_totem": "Summons a totem that spawns chaos meteors, dealing [calc:chaos_totem] \u00A75\u2600 Chaos\u00A77 Damage in an area.",
@@ -2271,7 +2278,7 @@
 	"mmorpg.stat_desc.dodge": "Chance to ignore attack damage",
 	"mmorpg.stat_desc.dot_dmg": "Increases dmg of effects that do damage over time, like burn",
 	"mmorpg.stat_desc.dot_lifesteal": "Restore % of DoT damage as health.",
-	"mmorpg.stat_desc.ele_atk_dmg": "Adds x element damage on weapon hit",
+	"mmorpg.stat_desc.ele_atk_dmg": "Adds x element damage on basic attacks only",
 	"mmorpg.stat_desc.ele_axe_damage": "Increases elemental damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.ele_bow_damage": "Increases elemental damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.ele_crossbow_damage": "Increases elemental damage done if it was caused by that weapon",
