--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -98,3 +98,6 @@ If you notice anything weird after update please say
 - added blizzard spell
 - added chat explanation for ANY reason your spell cast might fail :)
 Some are excluded like like low cooldown spammable spells wont screech at you for holding the button, but if the cooldown is higher than 2 seconds than it will gladly tell you
+- added hurt sound on magic shield being hit
+- tweaked item click on other code, please check for any errors
+- currencies shouldnt move items around in inventory anymore
